@@ -3,6 +3,9 @@
  * Add a ``RefsContainer.watch`` interface.
    (Jelmer Vernooĳ, #751)
 
+ * Fix pushing of new branches from porcelain.push.
+   (Jelmer Vernooĳ, #788)
+
 0.20.5	2020-06-22
 
  * Print a clearer exception when setup.py is executed on Python < 3.5.
